Adjust cta line height, add desktop nav icons and top article max height

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <li>plugged</li>
             <li>fundamentals</li>
             <li>readme</li>
+            <li class="desktop-only">growth quarters</li>
+            <li class="desktop-only">neural</li>
           </ul>
           <div class="search-i-wrapper">
             <i class="material-icons nvb-search">search</i>
@@ -76,6 +78,7 @@
   </div>
   <div class="top-articles">
     <article class="top1">
+      <div class="cover-logo"></div>
       <p>PLAY</p>
       <h2>How to check if your PC can handle the latest games</h2>
       <div class="ta-atcl-credits">
