--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   <div class="top-articles">
     <article class="top1">
       <div class="cover-logo"></div>
+      <div class="cover-date">Friday - March 13, 2020</div>
       <p>PLAY</p>
       <h2>How to check if your PC can handle the latest games</h2>
       <div class="ta-atcl-credits">
@@ -242,7 +243,29 @@
             </p>
           </div>
         </div>
-        <div class="fund-banner fourth-banner">4</div>
+        <div class="fund-banner fourth-banner">
+          <img src="images/banner4.jpeg" alt="fund banner image">
+          <h4>Bella and Duke</h4>
+          <div class="fb-pricetag">
+            <h5>$3.5M</h5>
+            <p>SERIES A</p>
+          </div>
+          <div class="fb-local-offer">
+            <a href="#">
+              <i class="material-icons fb-local-offer-icon">local_offer</i>
+              <span>Finance, +2</span>
+            </a>
+            <a href="#">
+              <i class="material-icons fb-local-offer-icon">card_travel</i>
+              <span>Connect Ventures, +4</span>
+            </a>
+          </div>
+          <div class="fb-local-offer-bottom">
+            <p>Money management app Emma
+              bags $2.5m in seed funding <a href="#">on FinTech Futures</a>
+            </p>
+          </div>
+        </div>
       </div>
     </section>
     <div class="sections-grid">
