Validates the html file validates the css files Adds ReadMe

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
     </div>
     <div class="footer-legal">
       <div>
-        <p><span><img class="tnw-ft-logo" src="./images/tnw-logo.svg"></span> © 2006-2020 The Next Web B.V.</p>
+        <p><span><img class="tnw-ft-logo" src="./images/tnw-logo.svg" alt="logo"></span> © 2006-2020 The Next Web B.V.</p>
         <p>Made with <span class="heart">♥</span> in Amsterdam.</p>
         <p>Powered by <a href="#">
             <img class="powered-by-logo"
