Change minor tweaks and merge conflict

--- a/index.html
+++ b/index.html
@@ -603,56 +603,56 @@
     <section class="latest-deals">
       <h2>Latest deals ></h2>
       <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-img img9"></a>
+        <a href="#" class="ln-bg-img lt-dktp-img img9"></a>
         <div class="ln-atcl-head">
           <h3>The 2020 All-in-One Data Scientist Mega Bundle</h3>
           <p><span class="line-through">$6000</span><span> - </span>$39.99</p>
         </div>
       </div>
       <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-img img10"></a>
+        <a href="#" class="ln-bg-img lt-dktp-img img10"></a>
         <div class="ln-atcl-head">
           <h3>The Complete 2020 PMP Training Bundle</h3>
           <p><span class="line-through">$999.9</span><span> - </span>$59.9</p>
         </div>
       </div>
       <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-img img11"></a>
+        <a href="#" class="ln-bg-img lt-dktp-img img11"></a>
         <div class="ln-atcl-head">
           <h3>The Microsoft Azure 203 Certification Training Course</h3>
           <p><span class="line-through">$399.9</span><span> - </span>$29.9</p>
         </div>
       </div>
       <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-img img12"></a>
+        <a href="#" class="ln-bg-img lt-dktp-img img12"></a>
         <div class="ln-atcl-head">
           <h3>The Complete Python Certification Bootcamp Bundle</h3>
           <p><span class="line-through">$390.9</span><span> - </span>$29.9</p>
         </div>
       </div>
       <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-img img13"></a>
+        <a href="#" class="ln-bg-img lt-dktp-img img13"></a>
         <div class="ln-atcl-head">
           <h3>The 2020 Premium Ethical Hacking Certification Bundle</h3>
           <p><span class="line-through">$1600</span><span> - </span>$99.9</p>
         </div>
       </div>
       <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-img img14"></a>
+        <a href="#" class="ln-bg-img lt-dktp-img img14"></a>
         <div class="ln-atcl-head">
           <h3>Learn How to Draw Freebie Bundle</h3>
           <p><span class="line-through">$0</span><span> - </span>$0</p>
         </div>
       </div>
       <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-img img15"></a>
+        <a href="#" class="ln-bg-img lt-dktp-img img15"></a>
         <div class="ln-atcl-head">
           <h3>The Complete 2020 Microsoft Azure Certification Prep Bundle</h3>
           <p><span class="line-through">$1839.99</span><span> - </span>$39</p>
         </div>
       </div>
       <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-img img16"></a>
+        <a href="#" class="ln-bg-img lt-dktp-img img16"></a>
         <div class="ln-atcl-head">
           <h3>StackSkills Unlimited: Lifetime Access</h3>
           <p><span class="line-through">$1495</span><span> - </span>$59</p>
