Updates the layout as per the TSE's recommendation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div class="fixed-header">
+  <header class="fixed-header">
     <nav class="nav">
       <div class="nav-logo">
         <a href="#">
@@ -75,7 +75,7 @@
         Did you know we have a TECH FESTIVAL? Check it out →
       </a>
     </div>
-  </div>
+  </header>
   <div class="top-articles">
     <article class="top1">
       <div class="cover-logo"></div>
@@ -189,6 +189,10 @@
               <i class="material-icons fb-local-offer-icon">local_offer</i>
               <span>Hospitality</span>
             </a>
+            <a href="#">
+              <i class="material-icons fb-local-offer-icon">card_travel</i>
+              <span>Large$Capital</span>
+            </a>
           </div>
           <div class="fb-local-offer-bottom">
             <p>Flexible staffing app secures
@@ -222,7 +226,7 @@
         </div>
         <div class="fund-banner">
           <img src="images/fb-img3.png" alt="fund banner image">
-          <h4>RunSafe Security</h4>
+          <h4>Security</h4>
           <div class="fb-pricetag">
             <h5>$3.5M</h5>
             <p>SERIES A</p>
@@ -423,7 +427,9 @@
               <b>Leaked trailer offers a new look at Godfall, the first game announced for PS5</b>
             </p>
           </div>
+          <div class="sub-article-img">
           <img src="./images/GodfallTeaser04-796x448.png" alt="godfall teaser">
+        </div>
         </article>
         <div class="sg-article-list">
           <ul>
