Start changing sub images to background images

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               <b>This tool automatically removes the background from any</b>
             </p>
           </div>
-          <img src="./images/latest.png" alt="latest">
+          <a href="#" class="sub-article-img sub-a-bg-img1"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -427,9 +427,9 @@
               <b>Leaked trailer offers a new look at Godfall, the first game announced for PS5</b>
             </p>
           </div>
-          <div class="sub-article-img">
-          <img src="./images/GodfallTeaser04-796x448.png" alt="godfall teaser">
-        </div>
+          <a href="#" class="sub-article-img sub-a-bg-img1">
+            <!-- <img src="./images/GodfallTeaser04-796x448.png" alt="godfall teaser"> -->
+          </a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -730,7 +730,8 @@
     </div>
     <div class="footer-legal">
       <div>
-        <p><span><img class="tnw-ft-logo" src="./images/tnw-logo.svg" alt="logo"></span> © 2006-2020 The Next Web B.V.</p>
+        <p><span><img class="tnw-ft-logo" src="./images/tnw-logo.svg" alt="logo"></span> © 2006-2020 The Next Web B.V.
+        </p>
         <p>Made with <span class="heart">♥</span> in Amsterdam.</p>
         <p>Powered by <a href="#">
             <img class="powered-by-logo"
