Fixed issues with image stretching

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               <b>This tool automatically removes the background from any</b>
             </p>
           </div>
-          <img src="./images/latest.png" alt="latest">
+          <a href="#" class="sub-article-img-wrapper sub-a-img1"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -340,7 +340,7 @@
               Sonos abandons 'Recycle Mode' on old speakers after much backlash
             </p>
           </div>
-          <img src="./images/sonos.png" alt="latest">
+          <a href="#" class="sub-article-img-wrapper sub-a-img2"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -382,7 +382,7 @@
               <b>Google launches TensorFlow for quantum computers</b>
             </p>
           </div>
-          <img src="./images/google-tensor.png" alt="latest">
+          <a href="#" class="sub-article-img-wrapper sub-a-img3"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -423,7 +423,7 @@
               <b>Leaked trailer offers a new look at Godfall, the first game announced for PS5</b>
             </p>
           </div>
-          <img src="./images/GodfallTeaser04-796x448.png" alt="godfall teaser">
+          <a href="#" class="sub-article-img-wrapper sub-a-img4"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -464,7 +464,7 @@
               <b>Mobile voting is far from perfect, but it's better than what we have now</b>
             </p>
           </div>
-          <img src="./images/mobile-voting.png" alt="us flag">
+          <a href="#" class="sub-article-img-wrapper sub-a-img5"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -505,7 +505,7 @@
               <b>That unexpected 'HIV test result' email you just got is probably a scam</b>
             </p>
           </div>
-          <img src="./images/Doctor-796x417.png" alt="doctor playing the guitar">
+          <a href="#" class="sub-article-img-wrapper sub-a-img6"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -546,7 +546,7 @@
               <b>TNW announces Neural: A blog for human-centric AI news and analysis</b>
             </p>
           </div>
-          <img src="./images/neural.png" alt="robot cartoon">
+          <a href="#" class="sub-article-img-wrapper sub-a-img7"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -587,7 +587,7 @@
               <b>How to find the secret surfing game in Microsoft Edge</b>
             </p>
           </div>
-          <img src="./images/Microsoft-Edge-Surf-796x417.jpg" alt="Microsoft Edge surfing game">
+          <a href="#" class="sub-article-img-wrapper sub-a-img8"></a>
         </article>
         <div class="sg-article-list">
           <ul>
@@ -724,7 +724,8 @@
     </div>
     <div class="footer-legal">
       <div>
-        <p><span><img class="tnw-ft-logo" src="./images/tnw-logo.svg" alt="logo"></span> © 2006-2020 The Next Web B.V.</p>
+        <p><span><img class="tnw-ft-logo" src="./images/tnw-logo.svg" alt="logo"></span> © 2006-2020 The Next Web B.V.
+        </p>
         <p>Made with <span class="heart">♥</span> in Amsterdam.</p>
         <p>Powered by <a href="#">
             <img class="powered-by-logo"
